--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    
-    <title>React App</title>
+
+    <title>Nick Kinlen - Frontend Developer</title>
   </head>
   <body>
     <noscript>
